--- a/cloud_qa/src/main/resources/application.yml
+++ b/cloud_qa/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9003
 spring: 
   application:  
-    name: tensquare-qa #指定服务名
+    name: cloud-qa #指定服务名
   datasource:  
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://192.168.33.129:3306/tensquare_qa?characterEncoding=UTF8&useSSL=false
