--- a/cloud_recruit/src/main/resources/application.yml
+++ b/cloud_recruit/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9002
 spring: 
   application:  
-    name: tensquare-recruit #指定服务名
+    name: cloud-recruit #指定服务名
   datasource:  
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://192.168.33.129:3306/tensquare_recruit?characterEncoding=UTF8&useSSL=false
