--- a/cloud_user/src/main/resources/application.yml
+++ b/cloud_user/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9008
 spring: 
   application:  
-    name: tensquare-user #指定服务名
+    name: cloud-user #指定服务名
   datasource:  
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://192.168.33.129:3306/tensquare_user?characterEncoding=UTF8&useSSL=false
